--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- CSS BOOTSRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <!-- logo navbar -->
       <a class="navbar-brand" href="#">
-        <img class="main-logo" src="./media/main_logo.png" alt="" /></a>
+        <img class="main-logo" src="./media/logos/main_logo.png" alt="" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -58,55 +58,55 @@
   <!-- fine navbar -->
 
   <!-- carousel -->
-  <div id="carouselExampleCaptions" class="carousel slide">
+  <div id="carouselExampleCaptions" class="carousel slide border border-dark">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
         aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://picsum.photos/300" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+      <div class="carousel-item active h-100">
+        <div class="row h-100 ">
+          <div class="col-4 h-100 d-flex justify-content-center align-items-center flex-column text-center">
+            <h1 class="my-4"> Hispanic Heritage Month </h1>
+            <p class="carousel-p"> Celebrate the work of rising hispanic artists </p>
+          </div>
+          <div class="col-8 h-100">
+            <img src="./media/carousel1.jpg" class="carousel-img d-block" alt="..." />
+          </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="https://picsum.photos/301" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://picsum.photos/302" class="d-block w-100" alt="..." />
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+      <div class="carousel-item h-100">
+        <div class="row h-100">
+          <div class="col-4 h-100 d-flex justify-content-center align-items-center flex-column text-center">
+            <h1 class="my-4"> Art Inspired by Fashion </h1>
+            <p class="carousel-p"> Discover art that captures the runaway's allure </p>
+          </div>
+          <div class="col-8 h-100">
+            <img src="./media/carousel2.jpg" class="carousel-img d-block" alt="..." />
+          </div>
         </div>
       </div>
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
 
   <!-- fine carousel -->
-  <!-- cards -->
+  <!-- cards asta -->
   <div class="container-fluid">
-    <div class="row background-p row-title py-2 ">
+    <div class="row background-p row-title py-1 border-dark border-bottom">
       <h1 class="text-center"> At Auction</h1>
     </div>
-    <div class="row row-title">
+    <div class="row">
       <div class="col-12 col-sm-4 card">
         <img src="./media/robert_colescott.png" class="card-img-top" alt="Robert Colescott Image">
         <div class="card-body">
@@ -136,10 +136,40 @@
       </div>
     </div>
   </div>
+  <!-- fine cards asta -->
+  <!-- categorie -->
+  <div class="container-fluid">
+    <div class="row background-s text-p row-title py-1 border-dark border-bottom border-top">
+      <h1 class="text-center"> Categories </h1>
+    </div>
+    <div class="row row-categorie justify-content-around">
+      <div
+        class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
+        <div class="div-categorie transition d-flex justify-content-center align-items-center m-2">
+          <img class="ms-2 img-logo" src="./media/logos/sculpture-logo.png" alt="">
+
+        </div>
+        <p class="p-categorie"> Sculptures </p>
+      </div>
+      <div
+        class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
+        <div class="div-categorie transition d-flex justify-content-center align-items-center m-2">
+          <img class="img-logo" src="./media/logos/picture-logo.png" alt="">
+
+        </div>
+        <p class="p-categorie"> Visual art </p>
+      </div>
+      <div
+      class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
+      <div class="div-categorie transition d-flex justify-content-center align-items-center m-2">
+        <img class="ms-1 img-logo" src="./media/logos/vynil-logo.png" alt="">
+        
+      </div>
+      <p class="p-categorie"> Music </p>
+      </div>
+    </div>
   </div>
-  </div>
-  </div>
-  <!-- fine cards -->
+  <!-- fine categorie -->
   <!-- JS BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
