--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- navbar -->
-  <nav class="navbar navbar-expand-md sticky-top transition">
+  <nav class="navbar navbar-expand-md sticky-top transition border">
     <div class="container-fluid">
       <!-- logo navbar -->
       <a class="navbar-brand" href="#">
@@ -25,25 +25,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"> Buy </a>
+            <a class="nav-link active" aria-current="page" href="./products.html"> Products </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#"> Sell </a>
+            <a class="nav-link" aria-current="page" href="#"> Buy </a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Artists
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </li>
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#"> Sell </a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -58,8 +46,8 @@
   <!-- fine navbar -->
 
   <!-- carousel -->
-  <div id="carouselExampleCaptions" class="carousel slide border border-dark">
-    <div class="carousel-indicators">
+  <div id="carouselExampleCaptions" class="carousel slide border-top border-dark">
+    <div class="carousel-indicators ">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
@@ -103,8 +91,8 @@
   <!-- fine carousel -->
   <!-- cards asta -->
   <div class="container-fluid">
-    <div class="row background-p row-title py-1 border-dark border-bottom">
-      <h1 class="text-center"> At Auction</h1>
+    <div class="row background-p row-title row-title-auction">
+      <h1 class="text-center pt-2 pb-1"> At Auction</h1>
     </div>
     <div class="row">
       <div class="col-12 col-sm-4 card">
@@ -139,8 +127,8 @@
   <!-- fine cards asta -->
   <!-- categorie -->
   <div class="container-fluid">
-    <div class="row background-s text-p row-title py-1 border-dark border-bottom border-top">
-      <h1 class="text-center"> Categories </h1>
+    <div class="row background-s text-p row-title row-title-categories py-1 ">
+      <h1 class="text-center pt-2 pb-1"> Categories </h1>
     </div>
     <div class="row row-categorie justify-content-around">
       <div
@@ -170,6 +158,23 @@
     </div>
   </div>
   <!-- fine categorie -->
+  <!-- sezione numeri -->
+  <div class="container-fluid">
+    <div class="row bg-white row-title row-title-auction">
+      <h1 class="text-center pt-2 pb-1"> Numbers </h1>
+    </div>
+    <div class="row background-s justify-content-center">
+      <div class="col-5 bg-danger text-center p-5 mx-2">
+        <span class="numbers pieces-number text-light">
+        </span>
+      </div>
+      <div class="col-5 bg-danger text-center p-5 mx-2">
+        <span class="numbers costumers-number text-light">
+        </span>
+      </div>
+    </div>
+  </div>
+  <!-- fine sezione numeri -->
   <!-- JS BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
