aggiunto funzionalità filtro cards

--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-md sticky-top transition border">
     <div class="container-fluid">
       <!-- logo navbar -->
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img class="main-logo" src="./media/logos/main_logo.png" alt="" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,22 +34,16 @@
             <a class="nav-link" href="#"> Sell </a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-          <button class="btn btn-outline-success" type="submit">
-            Search
-          </button>
-        </form>
       </div>
     </div>
   </nav>
   <!-- fine navbar -->
 
-  <!-- cards prodotti -->
+  <!-- cards e buttons -->
   <div class="container-fluid">
     <div class="row">
       <div class="col-4 bg-warning">
-
+        <!-- buttons -->
         <div id="radiowrapper">
           <h3>Filtro per Categoria</h3>
           <div class="form-check">
@@ -60,18 +54,11 @@
           </div>
         </div>
       </div>
-
+      
+      <!-- cards -->
       <div class="col-8 bg-info">
         <div class="row cardsWrapper">
-          <div class="col-12 col-sm-6 card">
-            <img src="./media/robert_colescott.png" class="card-img-top" alt="Robert Colescott Image">
-            <div class="card-body">
-              <h5 class="card-title">Robert Colescott</h5>
-              <p class="card-text">Work on Paper</p>
-              <p class="card-text"><strong>$5,500 (2 bids)</strong></p>
-              <p class="card-text">Register by Sep 27</p>
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
