--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Artrade</title>
-  <!-- CSS BOOTSRAP -->
+  <!-- Import Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./style.css" /> <!-- Link to custom CSS -->
 </head>
 
 <body>
-  <!-- navbar -->
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-md sticky-top transition border">
     <div class="container-fluid">
-      <!-- logo navbar -->
+      <!-- Navbar Brand (Logo) -->
       <a class="navbar-brand" href="#">
         <img class="main-logo" src="./media/logos/main_logo.png" alt="" /></a>
+      <!-- Mobile menu button -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <!-- Navbar Links -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -37,23 +39,27 @@
       </div>
     </div>
   </nav>
-  <!-- fine navbar -->
+  <!-- End Navbar -->
 
-  <!-- carousel -->
+  <!-- Carousel Section -->
   <div id="carouselExampleCaptions" class="carousel slide border-top border-dark">
+    <!-- Carousel Indicators -->
     <div class="carousel-indicators ">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
         aria-label="Slide 2"></button>
     </div>
+    <!-- Carousel Items -->
     <div class="carousel-inner">
       <div class="carousel-item active h-100">
-        <div class="row h-100 ">
+        <div class="row h-100">
+          <!-- Left side: Text content -->
           <div class="col-4 h-100 d-flex justify-content-center align-items-center flex-column text-center">
             <h1 class="my-4"> Hispanic Heritage Month </h1>
             <p class="carousel-p"> Celebrate the work of rising hispanic artists </p>
           </div>
+          <!-- Right side: Image -->
           <div class="col-8 h-100">
             <img src="./media/carousel1.jpg" class="carousel-img d-block" alt="..." />
           </div>
@@ -61,17 +67,19 @@
       </div>
       <div class="carousel-item h-100">
         <div class="row h-100">
+          <!-- Left side: Text content -->
           <div class="col-4 h-100 d-flex justify-content-center align-items-center flex-column text-center">
             <h1 class="my-4"> Art Inspired by Fashion </h1>
-            <p class="carousel-p"> Discover art that captures the runaway's allure </p>
+            <p class="carousel-p"> Discover art that captures the runway's allure </p>
           </div>
+          <!-- Right side: Image -->
           <div class="col-8 h-100">
             <img src="./media/carousel2.jpg" class="carousel-img d-block" alt="..." />
           </div>
         </div>
       </div>
     </div>
-
+    <!-- Carousel Controls -->
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -81,12 +89,12 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <!-- End Carousel -->
 
-  <!-- fine carousel -->
-  <!-- cards asta -->
+  <!-- Auction Cards Section -->
   <div class="container-fluid">
     <div class="row background-p row-title row-title-auction">
-      <h1 class="text-center pt-2 pb-1"> At Auction</h1>
+      <h1 class="text-center pt-2 pb-1"> At Auction </h1>
     </div>
     <div class="row">
       <div class="col-12 col-sm-4 card">
@@ -118,61 +126,66 @@
       </div>
     </div>
   </div>
-  <!-- fine cards asta -->
-  <!-- categorie -->
+  <!-- End Auction Cards Section -->
+
+  <!-- Categories Section -->
   <div class="container-fluid">
-    <div class="row background-s text-p row-title row-title-categories py-1 ">
+    <div class="row background-s text-p row-title row-title-categories py-1">
       <h1 class="text-center pt-2 pb-1"> Categories </h1>
     </div>
     <div class="row row-categorie justify-content-around">
-      <div
-        class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
+      <!-- Category: Sculptures -->
+      <div class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
         <div class="div-categorie transition d-flex justify-content-center align-items-center m-2">
-          <img class="ms-2 img-logo" src="./media/logos/sculpture-logo.png" alt="">
-
+          <img class="ms-2 img-logo" src="./media/logos/sculpture-logo.png" alt="Sculpture Logo">
         </div>
         <p class="p-categorie"> Sculptures </p>
       </div>
-      <div
-        class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
+      <!-- Category: Visual Art -->
+      <div class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
         <div class="div-categorie transition d-flex justify-content-center align-items-center m-2">
-          <img class="img-logo" src="./media/logos/picture-logo.png" alt="">
-
+          <img class="img-logo" src="./media/logos/picture-logo.png" alt="Visual Art Logo">
         </div>
-        <p class="p-categorie"> Visual art </p>
+        <p class="p-categorie"> Visual Art </p>
       </div>
-      <div
-      class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
-      <div class="div-categorie transition d-flex justify-content-center align-items-center m-2">
-        <img class="ms-1 img-logo" src="./media/logos/vynil-logo.png" alt="">
-        
-      </div>
-      <p class="p-categorie"> Music </p>
+      <!-- Category: Music -->
+      <div class="my-5 col-12 col-sm-3 col-categorie d-flex flex-column align-items-center justify-content-center">
+        <div class="div-categorie transition d-flex justify-content-center align-items-center m-2">
+          <img class="ms-1 img-logo" src="./media/logos/vynil-logo.png" alt="Music Logo">
+        </div>
+        <p class="p-categorie"> Music </p>
       </div>
     </div>
   </div>
-  <!-- fine categorie -->
-  <!-- sezione numeri -->
+  <!-- End Categories Section -->
+
+  <!-- Numbers Section -->
   <div class="container-fluid">
     <div class="row bg-white row-title row-title-auction">
       <h1 class="text-center pt-2 pb-1"> Numbers </h1>
     </div>
     <div class="row background-s justify-content-center">
+      <!-- Numbers: Pieces -->
       <div class="col-5 bg-danger text-center p-5 mx-2">
         <span class="numbers pieces-number text-light">
+          1,235 Pieces Sold <!-- Placeholder text for pieces number -->
         </span>
       </div>
+      <!-- Numbers: Customers -->
       <div class="col-5 bg-danger text-center p-5 mx-2">
         <span class="numbers costumers-number text-light">
+          982 Happy Customers <!-- Placeholder text for customers number -->
         </span>
       </div>
     </div>
   </div>
-  <!-- fine sezione numeri -->
-  <!-- JS BOOTSTRAP -->
+  <!-- End Numbers Section -->
+
+  <!-- Import Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <!-- Link to custom JavaScript -->
   <script src="main.js"></script>
 </body>
 
