--- a/index.html
+++ b/index.html
@@ -251,123 +251,138 @@
   <!-- End Numbers Section -->
 
   <!-- Reviews w swiper -->
-  <div class="row background-s text-p row-title row-title-categories py-1">
-    <h1 class="text-center pt-2 pb-1"> Reviews </h1>
-  </div>
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide d-flex justify-content-center align-items-center">
-        <div class="box-reviews d-flex flex-column justify-content-start align-items-center bg-info p-5 h-100">
-          <div class="user-div d-flex flex-column  align-items-center bg-success p-3">
-            <h3> Prova </h3>
-            <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
-          </div>
-          <div class="star-div fs-5 w-100 bg-danger text-center">
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-          </div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
-            voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
-            Voluptates.</p>
-        </div>
-      </div>
-      <div class="swiper-slide d-flex justify-content-center align-items-center">
-        <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
-          <div class="user-div d-flex flex-column  align-items-center bg-success">
-            <h3> Prova </h3>
-            <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
-          </div>
-          <div class="star-div w-100 bg-danger text-center">
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-          </div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
-            voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
-            Voluptates.</p>
-        </div>
-      </div>
-      <div class="swiper-slide d-flex justify-content-center align-items-center">
-        <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
-          <div class="user-div d-flex flex-column  align-items-center bg-success">
-            <h3> Prova </h3>
-            <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
-          </div>
-          <div class="star-div w-100 bg-danger text-center">
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-          </div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
-            voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
-            Voluptates.</p>
-        </div>
-      </div>
-      <div class="swiper-slide d-flex justify-content-center align-items-center">
-        <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
-          <div class="user-div d-flex flex-column  align-items-center bg-success">
-            <h3> Prova </h3>
-            <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
-          </div>
-          <div class="star-div w-100 bg-danger text-center">
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-          </div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
-            voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
-            Voluptates.</p>
-        </div>
-      </div>
-      <div class="swiper-slide d-flex justify-content-center align-items-center">
-        <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
-          <div class="user-div d-flex flex-column  align-items-center bg-success">
-            <h3> Prova </h3>
-            <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
-          </div>
-          <div class="star-div w-100 bg-danger text-center">
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-          </div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
-            voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
-            Voluptates.</p>
-        </div>
-      </div>
-      <div class="swiper-slide d-flex justify-content-center align-items-center">
-        <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
-          <div class="user-div d-flex flex-column  align-items-center bg-success">
-            <h3> Prova </h3>
-            <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
-          </div>
-          <div class="star-div w-100 bg-danger text-center">
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill text-warning"></i>
-            <i class="bi bi-star-fill"></i>
-            <i class="bi bi-star-fill"></i>
-          </div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
-            voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
-            Voluptates.</p>
-        </div>
-      </div>
+  <div class="container-fluid" data-aos="fade-up">
+    <div class="row background-s text-p row-title row-title-categories py-1">
+      <h1 class="text-center pt-2 pb-1"> Reviews </h1>
     </div>
-    <div class="swiper-pagination"></div>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide d-flex justify-content-center align-items-center">
+          <div class="box-reviews d-flex flex-column justify-content-start align-items-center bg-info p-5 h-100">
+            <div class="user-div d-flex flex-column  align-items-center bg-success p-3">
+              <h3> Prova </h3>
+              <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
+            </div>
+            <div class="star-div fs-5 w-100 bg-danger text-center">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
+              voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
+              Voluptates.</p>
+          </div>
+        </div>
+        <div class="swiper-slide d-flex justify-content-center align-items-center">
+          <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
+            <div class="user-div d-flex flex-column  align-items-center bg-success">
+              <h3> Prova </h3>
+              <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
+            </div>
+            <div class="star-div w-100 bg-danger text-center">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
+              voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
+              Voluptates.</p>
+          </div>
+        </div>
+        <div class="swiper-slide d-flex justify-content-center align-items-center">
+          <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
+            <div class="user-div d-flex flex-column  align-items-center bg-success">
+              <h3> Prova </h3>
+              <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
+            </div>
+            <div class="star-div w-100 bg-danger text-center">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
+              voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
+              Voluptates.</p>
+          </div>
+        </div>
+        <div class="swiper-slide d-flex justify-content-center align-items-center">
+          <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
+            <div class="user-div d-flex flex-column  align-items-center bg-success">
+              <h3> Prova </h3>
+              <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
+            </div>
+            <div class="star-div w-100 bg-danger text-center">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
+              voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
+              Voluptates.</p>
+          </div>
+        </div>
+        <div class="swiper-slide d-flex justify-content-center align-items-center">
+          <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
+            <div class="user-div d-flex flex-column  align-items-center bg-success">
+              <h3> Prova </h3>
+              <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
+            </div>
+            <div class="star-div w-100 bg-danger text-center">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
+              voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
+              Voluptates.</p>
+          </div>
+        </div>
+        <div class="swiper-slide d-flex justify-content-center align-items-center">
+          <div class="box-reviews d-flex flex-column justify-content-around align-items-center p-5 h-100">
+            <div class="user-div d-flex flex-column  align-items-center bg-success">
+              <h3> Prova </h3>
+              <img src="https://picsum.photos/300" alt="" class="img-slide my-2">
+            </div>
+            <div class="star-div w-100 bg-danger text-center">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill"></i>
+              <i class="bi bi-star-fill"></i>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium impedit inventore enim quisquam
+              voluptatibus nemo! Nobis, in harum at quod, ullam a corporis numquam dolor, ratione eaque voluptatum vel.
+              Voluptates.</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
   </div>
+
   <!-- End Reviews w swiper -->
+  <!-- Start footer -->
+  <footer class="py-3 my-4 background-s">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-p">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-p">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-p">Pricing</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-p">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-p">About</a></li>
+    </ul>
+    <p class="text-center text-p">© 2024 Company, Inc</p>
+  </footer>
+  <!-- End footer -->
 
   <!-- Import AOS JavaScript -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
